[gd_scene load_steps=20 format=3 uid="uid://dbaqm4nbxf7gd"]

[ext_resource type="Script" path="res://Player/Inventory/Scripts/Inventory.gd" id="1_xb1fh"]
[ext_resource type="Texture2D" uid="uid://cfrtbd53d1l6g" path="res://World/Shop/Assets/InventoryRect.png" id="2_056w3"]
[ext_resource type="FontFile" uid="uid://b87a4ripf8q1k" path="res://World/Shop/Assets/04B_30__.TTF" id="3_yyahs"]
[ext_resource type="Texture2D" uid="uid://cyhfc2wb72mli" path="res://World/Shop/Assets/close button.png" id="4_uedva"]
[ext_resource type="Texture2D" uid="uid://2o774dqju385" path="res://World/Shop/Assets/close button pressed.png" id="5_urs2j"]
[ext_resource type="FontFile" uid="uid://bmgg4pf2e6now" path="res://World/Shop/Assets/Merchant Copy.ttf" id="6_tdtt5"]
[ext_resource type="SpriteFrames" uid="uid://bqpdqveuisbci" path="res://World/Buildings/Assets/building.tres" id="7_tkub4"]
[ext_resource type="FontFile" uid="uid://bao8wtv7uxfku" path="res://Optionbar/Assets/04B_30__.TTF" id="8_2a128"]
[ext_resource type="Texture2D" uid="uid://bcjw06cry877x" path="res://World/Shop/Assets/button_texture.png" id="9_r46re"]
[ext_resource type="Script" path="res://Player/Inventory/Scripts/place_button.gd" id="10_nx052"]
[ext_resource type="FontFile" uid="uid://dmehj4ikin7cw" path="res://Player/Inventory/Assets/04B_30__.TTF" id="11_43lug"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7deq0"]
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0jrjm"]
texture = ExtResource("9_r46re")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wios0"]
load_path = "res://.godot/imported/button_texture.png-123d234be187e5d6ea473de4382a5dcb.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_34u2w"]
texture = SubResource("CompressedTexture2D_wios0")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 2.0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_to8b2"]
load_path = "res://.godot/imported/button_pressed_texture.png-e1fb9c1adb113e33232af41ec3f41d74.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_elxks"]
texture = SubResource("CompressedTexture2D_to8b2")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 2.0

[sub_resource type="Theme" id="Theme_g1v6n"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/font_sizes/font_size = 8
Button/fonts/font = ExtResource("8_2a128")
Button/styles/hover = SubResource("StyleBoxTexture_0jrjm")
Button/styles/normal = SubResource("StyleBoxTexture_34u2w")
Button/styles/pressed = SubResource("StyleBoxTexture_elxks")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mpn8c"]

[node name="Inventory" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 0
script = ExtResource("1_xb1fh")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(300, 160)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 310.0
offset_bottom = 170.0
texture = ExtResource("2_056w3")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -145.0
offset_top = -75.0
offset_right = 145.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="Shop_label" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(290, 17)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_yyahs")
theme_override_font_sizes/font_size = 13
text = "Inventory"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Control" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="Close_Button" type="TextureButton" parent="NinePatchRect/VBoxContainer/HBoxContainer/Button"]
texture_filter = 1
layout_mode = 0
offset_left = -20.0
offset_top = 3.0
offset_right = -9.0
offset_bottom = 14.0
texture_normal = ExtResource("4_uedva")
texture_pressed = ExtResource("5_urs2j")
stretch_mode = 0

[node name="Panel" type="Panel" parent="NinePatchRect/VBoxContainer"]
custom_minimum_size = Vector2(290, 116)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_7deq0")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/Panel"]
layout_mode = 1
offset_right = 290.0
offset_bottom = 116.0
theme_override_constants/separation = 3

[node name="VSplitContainer" type="VSplitContainer" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 3)
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(290, 104)
layout_mode = 2
size_flags_horizontal = 4
follow_focus = true
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 3

[node name="HSplitContainer" type="HSplitContainer" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Buiding_Card" type="NinePatchRect" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer"]
self_modulate = Color(2.14293e-06, 0.677722, 0.368013, 1)
custom_minimum_size = Vector2(80, 105)
layout_mode = 2
texture = ExtResource("2_056w3")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer/Buiding_Card"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 100.0
theme_override_constants/separation = 5

[node name="VSplitContainer" type="VSplitContainer" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer/Buiding_Card/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 1)
layout_mode = 2

[node name="Name" type="Label" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer/Buiding_Card/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 10)
layout_mode = 2
theme_override_fonts/font = ExtResource("6_tdtt5")
theme_override_font_sizes/font_size = 10
text = "Moonetengenerator"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HSplitContainer" type="HSplitContainer" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer/Buiding_Card/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2

[node name="building_image" type="AnimatedSprite2D" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer/Buiding_Card/VBoxContainer/HSplitContainer"]
position = Vector2(39.88, 19.3868)
scale = Vector2(0.455, 0.322081)
sprite_frames = ExtResource("7_tkub4")
animation = &"moonetenGenerator"

[node name="Count" type="Label" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer/Buiding_Card/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_yyahs")
theme_override_font_sizes/font_size = 6
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button" type="Control" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer/Buiding_Card/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 10)
layout_mode = 2
theme = SubResource("Theme_g1v6n")

[node name="place_button" type="Button" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer/Buiding_Card/VBoxContainer/button"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -7.0
offset_right = 27.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_mpn8c")
text = "place"
script = ExtResource("10_nx052")

[node name="Empty_lable" type="Label" parent="NinePatchRect/VBoxContainer/Panel/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
theme_override_fonts/font = ExtResource("11_43lug")
text = "no buildings in here"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/Button/Close_Button" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer/Buiding_Card/VBoxContainer/button/place_button" to="NinePatchRect/VBoxContainer/Panel/VBoxContainer/ScrollContainer/HBoxContainer/Buiding_Card/VBoxContainer/button/place_button" method="_on_pressed"]
